feat 1.升级springboot至3.1.5版本，同步升级相关的包，mybatis-plus、elasticsearch以及相关的依赖的包，升级jdk为21. 2.移除flink模块，移除cache 3.优化升级后的代码